--- a/package.json
+++ b/package.json
@@ -6,19 +6,24 @@
     "start": "next start"
   },
   "dependencies": {
-    "autoprefixer": "^10.0.4",
+    "autoprefixer": "^10.4.2",
+    "axios": "^0.25.0",
     "clsx": "^1.1.1",
     "ioredis": "^4.23.0",
     "next": "latest",
-    "postcss": "^8.1.10",
+    "postcss": "^8.4.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^1.0.2",
     "swr": "^0.5.1",
-    "tailwindcss": "^2.0.2",
+    "tailwindcss": "^3.0.15",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@tailwindcss/jit": "0.1.1"
+    "@tailwindcss/jit": "0.1.1",
+    "@types/axios": "^0.14.0",
+    "@types/ioredis": "^4.28.7",
+    "@types/react": "^17.0.38",
+    "typescript": "^4.5.5"
   }
 }
