--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@node-redis/json": "^1.0.2",
+    "@node-redis/search": "^1.0.2",
     "autoprefixer": "^10.4.2",
     "axios": "^0.25.0",
     "clsx": "^1.1.1",
-    "ioredis": "^4.23.0",
     "next": "latest",
     "postcss": "^8.4.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hot-toast": "^1.0.2",
+    "redis": "^4.0.2",
     "swr": "^0.5.1",
     "tailwindcss": "^3.0.15",
     "uuid": "^8.3.2"
