--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.2",
     "axios": "^0.25.0",
     "clsx": "^1.1.1",
+    "gravatar": "^1.8.2",
     "next": "latest",
     "postcss": "^8.4.5",
     "react": "^17.0.2",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@tailwindcss/jit": "0.1.1",
     "@types/axios": "^0.14.0",
+    "@types/gravatar": "^1.8.3",
     "@types/ioredis": "^4.28.7",
     "@types/react": "^17.0.38",
     "typescript": "^4.5.5"
