--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
+  "name": "gleampkg",
   "private": true,
+  "license": "GPL-3.0-only",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
